# binary-matcher

./: CMakeLists.txt  README.md  binary_matcher.cu  main.cpp
include/: binary_matcher.cuh  binary_matcher_kernels.cuh
